[package]
name = "minecraft"
version = "0.1.0"
authors = ["Oh JuHan <oj47191@gmail.com>"]
description = "An"
# respository = ""
# readme = ""
# keywords = ""
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.14.0"
glfw = "0.51.0"
rand = "0.8.5"
